--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,24 @@
 {
-
+    "name": "teenager19/vacasol-php-sdk",
+    "type": "library",
+    "description": "PHP SDK for Vacasol API",
+    "keywords": ["api","vacasol", "sdk"],
+    "homepage": "https://github.com/Teenager19/vacasol-php-sdk.git",
+    "license": "Apache-2.0",
+    "authors": [
+        {
+            "name": "Ondrej Kousal",
+            "email": "ondrej.kousal@hotmail.com",
+            "homepage": "",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "php": ">=5.4.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "Vacasol\\": "src"
+        }
+    }
 }
